@@ -99,6 +99,7 @@ Misc:
  - Debugger: Add software breakpoint support to gdb
  - Util: Add PRIz macro for libc versions that don't support %z
  - SDL: Increase default audio buffer size to 1024 samples
+ - GBA: Add override for Pokemon Pinball: Ruby and Sapphire rumble
 
 0.4.1: (2016-07-11)
 Bugfixes:
